--- a/7-bom/Task7/task7.css
+++ b/7-bom/Task7/task7.css
@@ -1,3 +1,10 @@
-body {
-    
+#country, #cities {
+    width: 200px;
+    font-size: 20px;
+    text-align: center;
+    height: 40px;
+}
+
+p {
+    font-size: 35px;
 }
